--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.myapplication">
+    package="com.example.concesionario">
 
     <application
         android:allowBackup="true"
@@ -11,14 +11,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:theme="@style/Theme.Concesionario"
         tools:targetApi="31">
         <activity
-            android:theme="@style/Theme.Estacionamiento"
             android:name=".Index"
             android:exported="false"
-            android:label="@string/title_activity_main2" />
+            android:label="@string/title_activity_index" />
         <activity
-            android:theme="@style/Theme.Splash"
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
